# JanumachineTerrainFormat

./: CHANGELOG.md  CMakeLists.txt  JanumachineTerrainFormat.sln  LICENSE.md  README.md
.github/workflows/: release.yml
docs/: ATTRIBUTION.md
jtf/: CMakeLists.txt  JTF.vcxproj  JTF.vcxproj.filters
jtf/include/: jtf.h  jtf_c_api.h  jtf_crc32.h  jtf_export.h  jtf_types.h  jtf_utility.h  jtf_version.h  jtf_version.h.in
jtf/resource/: jtf_version.rc.in
jtf/src/: jtf_c_api.cpp  jtf_crc32.cpp  jtf_reader.cpp  jtf_writer.cpp
jtf_testing/: CMakeLists.txt  JTF_Testing.cpp  JTF_Testing.vcxproj  JTF_Testing.vcxproj.filters  jtf_testing.cpp
